Prevent External CSS Causing Overflow
External CSS could make the glider container wider than the page.

--- a/glider.css
+++ b/glider.css
@@ -2,6 +2,7 @@
 .glider {
     overflow: hidden;
     position: relative;
+    max-width: 100vw !important;
 }
 
 .glider-list {
